atualizando link redirect

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <p>
       <ul>
         <li>
-          <a href="/mochila-de-viagem/" target="_blank">mochila-de-viagem</a>
+          <a href="/alura/mochila-de-viagem/" target="_blank">mochila-de-viagem</a>
         </li>
       </ul>
     </p>
