--- a/typescript-curso-1/public/index.html
+++ b/typescript-curso-1/public/index.html
@@ -34,6 +34,6 @@
     </form>
     <br>
     <br>
-    <script type="module" src="js/app.js"></script>
+    <script type="module" src="js/bundle.js"></script>
 </body>
 </html>
