--- a/typescript-curso-1/public/index.html
+++ b/typescript-curso-1/public/index.html
@@ -35,5 +35,6 @@
     <br>
     <br>
     <script type="module" src="js/bundle.js"></script>
+    <!-- <script type="module" src="js/app.js"></script> -->
 </body>
 </html>
