adicionando novo repo

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
         <li>
           <a href="/alura/mochila-de-viagem/" target="_blank">mochila-de-viagem</a>
         </li>
+        <li>
+          <a href="/alura/typescript-curso-1/public" target="_blank">typescript-curso-1</a>
+        </li>
       </ul>
     </p>
   </section>
