--- a/typescript-curso-3/public/index.html
+++ b/typescript-curso-3/public/index.html
@@ -32,6 +32,9 @@
     </div>
 
     <button class="btn btn-primary" type="submit">Incluir</button>
+    <button id="botao-importa" class="btn btn-primary">
+      importar
+    </button>
   </form>
   <br>
   <br>
