--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
         <li>
           <a href="/alura/typescript-curso-2/public" target="_blank">typescript-curso-2</a>
         </li>
+        <li>
+          <a href="/alura/typescript-curso-3/public" target="_blank">typescript-curso-3</a>
+        </li>
       </ul>
     </p>
   </section>
